# JMU_nauticalEnglishOralAndListening

./: .gitignore  README.md  local_embedding_server.py  pyproject.toml  requirements-dev.txt  requirements.txt  start_lightrag.ps1  upload_smcp.ps1  upload_smcp.py
SMCP_DATA/: SMCP.md
SMCP_DATA/audioFile/: cmcp_spider_db.sql
corpus/db/: corpus.db
dev_plan/: phase1_environment_asr.md  phase2_corpus_nlp_scoring.md  phase3_tts_feedback_session.md  phase4_pyqt6_ui.md  phase5_optimization_packaging.md  phase6_llm_scenario_dialogue.md  phase7_lightrag_rag_enhancement.md
docs/: developer_guide.md  lightrag_upload_guide.md  user_manual.md
docs/superpowers/plans/: 2026-04-13-nautical-english-trainer-plan.md
docs/superpowers/specs/: 2026-04-13-nautical-english-trainer-design.md
scripts/: _parse_sql_schema.py  benchmark.py  build_installer.py  demo_session.py  download_models.py  import_smcp_audio.py  nautical_trainer.spec  seed_corpus.py
src/: main.py
src/nautical_english/: __init__.py  config.py
src/nautical_english/asr/: __init__.py  audio_capture.py  recognizer.py
src/nautical_english/coach/: prompts.py  service.py
tests/: conftest.py  test_config.py
tests/test_asr/: test_audio_capture.py  test_recognizer.py
tests/test_coach/: test_prompts.py  test_service.py
tests/test_corpus/: test_repository.py
tests/test_feedback/: test_generator.py
tests/test_llm/: test_providers.py
tests/test_nlp/: test_matcher.py  test_scorer.py
tests/test_scenario/: test_repository.py
tests/test_training/: test_session.py
tests/test_tts/: test_synthesizer.py
(+44 files in other folders)
